small styling fix on tablet mode

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -174,6 +174,11 @@ body{
      @media screen and (min-width: 0px) and (max-width: $smartphone) {
         text-align: center;
     }
+    /* tablet */
+    @media screen and (min-width: $smartphone) and (max-width: $notebook) {
+        display: flex;
+        gap: 40px;
+    }
     .text{
         /* tablet */
         @media screen and (min-width: $smartphone) and (max-width: $notebook) {
@@ -195,7 +200,7 @@ body{
     @media screen and (min-width: $smartphone) and (max-width: $notebook) {
         display: flex;
         flex-direction: column; 
-        justify-content: right;
+        justify-content: end;
     }
     }
     .contact-btn{
